Added data for GDP (PPP) and GDP per capita (PPP)

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <table id="countryTable">
         <thead>
             <tr>
-                <th onclick="sortTable('name')">Country Name</th>
+                <th onclick="sortTable('name')">Country</th>
                 <th onclick="sortTable('region')">Region</th>
                 <th onclick="sortTable('population')">Population</th>
-                <th onclick="sortTable('gdp')">GDP</th>
-                <th onclick="sortTable('gdpPerCapita')">GDP per Capita</th>
+                <th onclick="sortTable('gdp')">GDP (nominal)</th>
+				<th onclick="sortTable('gdpPPP')">GDP (PPP)</th>
+                <th onclick="sortTable('gdpPerCapita')">GDP per Capita (nominal)</th>
+                <th onclick="sortTable('gdpPerCapitaPPP')">GDP per Capita (PPP)</th>
             </tr>
         </thead>
         <tbody>
