Removed population data

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <tr>
                     <th onclick="sortTable('name')" scope="col">Country Name <i class="fas fa-sort"></i></th>
                     <th onclick="sortTable('region')" scope="col">Region <i class="fas fa-sort"></i></th>
-                    <th onclick="sortTable('population')" scope="col">Population <i class="fas fa-sort"></i></th>
                     <th onclick="sortTable('gdp')" scope="col">GDP (nominal) <i class="fas fa-sort"></i></th>
                     <th onclick="sortTable('gdpPPP')" scope="col">GDP (PPP) <i class="fas fa-sort"></i></th>
                     <th onclick="sortTable('gdpPerCapita')" scope="col">GDP per Capita (nominal) <i class="fas fa-sort"></i></th>
@@ -28,7 +27,7 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- Rows will be dynamically added here by JavaScript -->
+                <!-- Rows will be added here by JavaScript -->
             </tbody>
         </table>
     </div>
