Added Life Expectancy and Literacy Rate data

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                     <th onclick="sortTable('gdpPPP')" scope="col">GDP (PPP) <i class="fas fa-sort"></i></th>
                     <th onclick="sortTable('gdpPerCapita')" scope="col">GDP per Capita (nominal) <i class="fas fa-sort"></i></th>
                     <th onclick="sortTable('gdpPerCapitaPPP')" scope="col">GDP per Capita (PPP) <i class="fas fa-sort"></i></th>
+                    <th onclick="sortTable('lifeExpectancy')" scope="col">Life Expectancy <i class="fas fa-sort"></i></th>
+					<th onclick="sortTable('literacy')" scope="col">Literacy Rate (%) <i class="fas fa-sort"></i></th>
                 </tr>
             </thead>
             <tbody>
