Made table narrower

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <table id="countryTable" class="table table-striped table-hover">
             <thead class="thead-dark">
                 <tr>
-                    <th onclick="sortTable('name')" scope="col">Country Name <i class="fas fa-sort"></i></th>
+                    <th onclick="sortTable('name')" scope="col">Country <i class="fas fa-sort"></i></th>
                     <th onclick="sortTable('region')" scope="col">Region <i class="fas fa-sort"></i></th>
                     <th onclick="sortTable('gdp')" scope="col">GDP (nominal) <i class="fas fa-sort"></i></th>
                     <th onclick="sortTable('gdpPPP')" scope="col">GDP (PPP) <i class="fas fa-sort"></i></th>
@@ -34,7 +34,7 @@
         </table>
     </div>
     <footer class="bg-dark text-white text-center py-3 mt-4">
-        <p>Placeholder</p>
+        <p>My website, 2025</p>
     </footer>
     <script src="main.js"></script>
 </body>
