--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <p>Most recent worldwide data, obtained from the World Bank.</p>
     </header>
     <div class="container mt-4">
+        <div class="search-bar mb-3">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search for a country...">
+        </div>
         <table id="countryTable" class="table table-striped table-hover">
             <thead class="thead-dark">
                 <tr>
@@ -25,7 +28,7 @@
                     <th onclick="sortTable('gdpPerCapita')" scope="col">GDP per Capita (nominal) <i class="fas fa-sort"></i></th>
                     <th onclick="sortTable('gdpPerCapitaPPP')" scope="col">GDP per Capita (PPP) <i class="fas fa-sort"></i></th>
                     <th onclick="sortTable('lifeExpectancy')" scope="col">Life Expectancy <i class="fas fa-sort"></i></th>
-					<th onclick="sortTable('literacy')" scope="col">Literacy Rate (%) <i class="fas fa-sort"></i></th>
+                    <th onclick="sortTable('literacy')" scope="col">Literacy Rate (%) <i class="fas fa-sort"></i></th>
                 </tr>
             </thead>
             <tbody>
