--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Worldwide Country Data</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header class="bg-info text-white text-center py-4">
         <h1>Worldwide Country Data</h1>
         <p>Most recent worldwide data, obtained from the World Bank.</p>
     </header>
+
     <div class="container mt-4">
+        <div id="loadingIndicator" class="loading">Loading data...</div>
         <div class="search-bar mb-3">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search for a country...">
+            <input type="text" id="searchInput" class="form-control" placeholder="Search for a country..." />
         </div>
         <table id="countryTable" class="table table-striped table-hover">
             <thead class="thead-dark">
@@ -37,7 +39,7 @@
         </table>
     </div>
     <footer class="bg-dark text-white text-center py-3 mt-4">
-        <p>My website, 2025</p>
+        <p id="footerText"></p>
     </footer>
     <script src="main.js"></script>
 </body>
