--- a/index.html
+++ b/index.html
@@ -7,40 +7,59 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <style>
+      body {
+        font-family: 'Roboto', sans-serif;
+        background-color: #f9f9f9;
+      }
+    .table-responsive {
+        border-radius: 15px;
+    }
+    </style>
 </head>
 <body>
-    <header class="bg-info text-white text-center py-4">
+    <header class="bg-info text-white text-center py-4 shadow-sm">
         <h1>Worldwide Country Data</h1>
         <p>Most recent worldwide data, obtained from the World Bank.</p>
     </header>
 
-    <div class="container mt-4">
-        <div id="loadingIndicator" class="loading">Loading data...</div>
-        <div class="search-bar mb-3">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search for a country..." />
+    <div class="container my-4 d-flex flex-column align-items-center">
+        <!-- loading text -->
+        <div id="loadingIndicator" class="loading mb-3 font-weight-bold text-center" style="display: none;">Loading data...</div>
+        
+        <!-- search bar -->
+        <div class="mb-3 w-100" style="max-width: 600px;">
+            <input type="text" id="searchInput" class="form-control rounded shadow-sm" placeholder="Search for a country..." />
         </div>
-        <table id="countryTable" class="table table-striped table-hover">
-            <thead class="thead-dark">
-                <tr>
-                    <th onclick="sortTable('name')" scope="col">Country <i class="fas fa-sort"></i></th>
-                    <th onclick="sortTable('region')" scope="col">Region <i class="fas fa-sort"></i></th>
-                    <th onclick="sortTable('gdp')" scope="col">GDP (nominal) <i class="fas fa-sort"></i></th>
-                    <th onclick="sortTable('gdpPPP')" scope="col">GDP (PPP) <i class="fas fa-sort"></i></th>
-                    <th onclick="sortTable('gdpPerCapita')" scope="col">GDP per Capita (nominal) <i class="fas fa-sort"></i></th>
-                    <th onclick="sortTable('gdpPerCapitaPPP')" scope="col">GDP per Capita (PPP) <i class="fas fa-sort"></i></th>
-                    <th onclick="sortTable('lifeExpectancy')" scope="col">Life Expectancy <i class="fas fa-sort"></i></th>
-                    <th onclick="sortTable('literacy')" scope="col">Literacy Rate (%) <i class="fas fa-sort"></i></th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Rows will be added here by JavaScript -->
-            </tbody>
-        </table>
+        
+        <!-- table -->
+        <div class="table-responsive w-100" style="max-width: 1000px;">
+            <table id="countryTable" class="table table-striped table-hover rounded shadow-sm mb-0">
+                <thead class="thead-dark">
+                    <tr>
+                        <th onclick="sortTable('name')" scope="col" style="cursor:pointer;">Country <i class="fas fa-sort"></i></th>
+                        <th onclick="sortTable('region')" scope="col" style="cursor:pointer;">Region <i class="fas fa-sort"></i></th>
+                        <th onclick="sortTable('gdp')" scope="col" style="cursor:pointer;">GDP (nominal) <i class="fas fa-sort"></i></th>
+                        <th onclick="sortTable('gdpPPP')" scope="col" style="cursor:pointer;">GDP (PPP) <i class="fas fa-sort"></i></th>
+                        <th onclick="sortTable('gdpPerCapita')" scope="col" style="cursor:pointer;">GDP per Capita (nominal) <i class="fas fa-sort"></i></th>
+                        <th onclick="sortTable('gdpPerCapitaPPP')" scope="col" style="cursor:pointer;">GDP per Capita (PPP) <i class="fas fa-sort"></i></th>
+                        <th onclick="sortTable('lifeExpectancy')" scope="col" style="cursor:pointer;">Life Expectancy <i class="fas fa-sort"></i></th>
+                        <th onclick="sortTable('literacy')" scope="col" style="cursor:pointer;">Literacy Rate (%) <i class="fas fa-sort"></i></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Rows will be added here by JavaScript -->
+                </tbody>
+            </table>
+        </div>
     </div>
-    <footer class="bg-dark text-white text-center py-3 mt-4">
-        <p id="footerText"></p>
-    </footer>
+
+<footer class="bg-dark text-white text-center py-3 mt-4 shadow-sm">
+    <div class="container">
+        <p id="footerText" class="mb-0"></p>
+    </div>
+</footer>
+
     <script src="main.js"></script>
 </body>
 </html>
